# Py-Web_HW_3_part_1

./: main.py
part_2/: factorize.py  pyproject.toml
